--- a/src/utils/proyect_ML.ipynb
+++ b/src/utils/proyect_ML.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -928,29 +928,6 @@
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "Index(['id', 'Gender', 'Age', 'Height', 'Weight',\n",
-       "       'family_history_with_overweight', 'FAVC', 'FCVC', 'NCP', 'CAEC',\n",
-       "       'SMOKE', 'CH2O', 'SCC', 'FAF', 'TUE', 'CALC', 'MTRANS', 'NObeyesdad'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -1123,7 +1100,7 @@
        "4  0.931721  Sometimes  Public_Transportation  Overweight_Level_II  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1137,6 +1114,29 @@
    "metadata": {},
    "source": [
     "### **5.EDA**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['id', 'Gender', 'Age', 'Height', 'Weight',\n",
+       "       'family_history_with_overweight', 'FAVC', 'FCVC', 'NCP', 'CAEC',\n",
+       "       'SMOKE', 'CH2O', 'SCC', 'FAF', 'TUE', 'CALC', 'MTRANS', 'NObeyesdad'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train.columns"
    ]
   },
   {
@@ -1156,10 +1156,21 @@
     "\n",
     " + Age: edad del individuo\n",
     "\n",
-    " + Height: \n",
-    " + FAVC: Consumo frecuente de alimentos ricos en calorías Frecuencia de consumo de vegetales (FCVC), Número de comidas principales (NCP), Consumo de alimentos entre comidas (CAEC), Consumo de agua diario (CH20 ), y Consumo de alcohol (CALC). Los atributos relacionados con la condición física son: Monitoreo del consumo de calorías (SCC), Frecuencia de actividad física (FAF), Tiempo de uso de dispositivos tecnológicos (TUE), Transporte utilizado (MTRANS)\n",
-    "variables obtenidas:\n",
-    "Sexo, Edad, Altura y Peso."
+    " + Height: altura del individuo(m)\n",
+    "\n",
+    " + Weight: peso del individuo(kg)\n",
+    "\n",
+    " + family_history_with_overweight: Antecedentes familiares con sobrepeso(si/no)\n",
+    "\n",
+    " + FAVC: Consumo frecuente de alimentos ricos en calorías Frecuencia de consumo de vegetales(si/no)\n",
+    " \n",
+    "+ FCVC: Número de comidas principales \n",
+    "\n",
+    "+ NCP: Consumo de alimentos entre comidas \n",
+    "\n",
+    "+ CAEC), Consumo de agua diario (CH20 ), y Consumo de alcohol (CALC). Los atributos relacionados con la condición física son: Monitoreo del consumo de calorías (SCC), Frecuencia de actividad física (FAF), Tiempo de uso de dispositivos tecnológicos (TUE)\n",
+    "\n",
+    " + MTRANS: Transporte utilizado\n"
    ]
   },
   {
