--- a/src/notebooks/proyect_resume.ipynb
+++ b/src/notebooks/proyect_resume.ipynb
@@ -944,7 +944,7 @@
    "source": [
     "En esta primera exploración observamos los siguiente:\n",
     "\n",
-    "* El conjunto de datos contiene 20758 entradas (individuos) y diversas variables como edad, juegos jugados, minutos por juego, tiros de campo, porcentajes, rebotes, asistencias, robos, bloqueos, pérdidas, faltas personales y puntos por juego.\n",
+    "* El conjunto de datos contiene 20758 entradas (individuos) y diversas variables como edad, peso, altura etc.\n",
     "\n",
     "* Nuestro DataFrame tiene 20758 observaciones y 18 columnas. De las 18 variables que contiene, 9 son cualitativas y 9 son cuantitativas. No tenemos valores duplicados. \n",
     "\n",
