--- a/src/notebooks/proyect_resume.ipynb
+++ b/src/notebooks/proyect_resume.ipynb
@@ -2171,7 +2171,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "La variable 'weight' tiene una alta correlación con la target, lo que es lógico puesto que el peso del individuo influye directamente en el nivel de obesidad en el que se encuentra el mismo, por lo que es una variable determinante a la hora de clasificar el nivel de obesidad de una persona."
+    "La variable 'weight' tiene una alta correlación con la target, lo que es lógico puesto que el peso del individuo influye directamente en el nivel de obesidad en el que se encuentra el mismo, lo trataremos más adelante para que no afecte a la capacidad del modelo."
    ]
   },
   {
@@ -2289,32 +2289,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**6.Feature Engineer**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 63,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df['categoria_peso'] = pd.cut(df['weight'], bins=3, labels=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 65,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.drop('weight', axis=1, inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**7.División del dataset**"
+    "**6.División del dataset**"
    ]
   },
   {
@@ -2398,7 +2373,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**8.Preprocesamiento**"
+    "**7.Preprocesamiento**"
    ]
   },
   {
@@ -2452,7 +2427,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**9.Cross validation + Base-Lines**"
+    "**8.Cross validation + Base-Lines**"
    ]
   },
   {
@@ -2771,7 +2746,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Entrenamiento**"
+    "**9.Entrenamiento**"
    ]
   },
   {
@@ -3245,7 +3220,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Predicción**"
+    "**10.Predicción**"
    ]
   },
   {
@@ -3273,7 +3248,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Validación del modelo**"
+    "**11.Validación del modelo**"
    ]
   },
   {
@@ -3340,7 +3315,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Predicción con test**"
+    "**12.Predicción con test**"
    ]
   },
   {
@@ -3447,7 +3422,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
